tests/baselines/reference/arrayLiteralExpressionContextualTyping.errors.txt
arrayLiteralExpressionContextualTyping.ts(6,5): error TS2322: Type '[number, number, number, number]' is not assignable to type '[number, number, number]'.
  Source has 4 element(s) but target allows only 3.
arrayLiteralExpressionContextualTyping.ts(7,5): error TS2322: Type '[number, number, number, string]' is not assignable to type '[string | number, string | number, string | number]'.
  Source has 4 element(s) but target allows only 3.
arrayLiteralExpressionContextualTyping.ts(8,5): error TS2322: Type '[number, number, number, string]' is not assignable to type '[number, number, number]'.
  Source has 4 element(s) but target allows only 3.
arrayLiteralExpressionContextualTyping.ts(14,5): error TS2322: Type '[number, number, number, number, number, number]' is not assignable to type '[number, number, number]'.
  Source has 6 element(s) but target allows only 3.


==== arrayLiteralExpressionContextualTyping.ts (4 errors) ====
    // In a contextually typed array literal expression containing no spread elements, an element expression at index N is contextually typed by
    //      the type of the property with the numeric name N in the contextual type, if any, or otherwise
    //      the numeric index type of the contextual type, if any.
    var array = [1, 2, 3];
    var array1 = [true, 2, 3];  // Contextual type by the numeric index type of the contextual type
    var tup: [number, number, number] = [1, 2, 3, 4];
        ~~~
!!! error TS2322: Type '[number, number, number, number]' is not assignable to type '[number, number, number]'.
!!! error TS2322:   Source has 4 element(s) but target allows only 3.
    var tup1: [number|string, number|string, number|string] = [1, 2, 3, "string"];
        ~~~~
!!! error TS2322: Type '[number, number, number, string]' is not assignable to type '[string | number, string | number, string | number]'.
!!! error TS2322:   Source has 4 element(s) but target allows only 3.
    var tup2: [number, number, number] = [1, 2, 3, "string"];  // Error
        ~~~~
!!! error TS2322: Type '[number, number, number, string]' is not assignable to type '[number, number, number]'.
!!! error TS2322:   Source has 4 element(s) but target allows only 3.
    
    // In a contextually typed array literal expression containing one or more spread elements,
    // an element expression at index N is contextually typed by the numeric index type of the contextual type, if any.
    var spr = [1, 2, 3, ...array];
    var spr1 = [1, 2, 3, ...tup];
    var spr2:[number, number, number] = [1, 2, 3, ...tup];  // Error
        ~~~~
!!! error TS2322: Type '[number, number, number, number, number, number]' is not assignable to type '[number, number, number]'.
!!! error TS2322:   Source has 6 element(s) but target allows only 3.
    